--- a/post_graduation.html
+++ b/post_graduation.html
@@ -17,7 +17,7 @@
             <hr>
             <br>
             <b>Semester 2 : </b><br>
-            <img src ="/sem 2.png" height ="500"<hr>
+            <img src ="/sem 2.png" height ="500"<hr><hr>
         </big>
     </p>
 </body>
